name:                HaskAdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spencerturkel/HaskAdventOfCode#readme
license:             BSD3
license-file:        LICENSE
author:              Spencer Turkel
maintainer:          contact@spencerturkel.com
copyright:           Copyright (c) 2017 Spencer Turkel
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:
  input/*.txt

library
  hs-source-dirs:
    src
    , src/Day3
  exposed-modules:
    Day3PartOne
    , Day3PartTwo
    , Day4
    , Point
    , Spiral
  other-modules:
    Paths_HaskAdventOfCode
  autogen-modules:
    Paths_HaskAdventOfCode
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5
    , Stream >= 0.4.7 && < 0.5
  default-extensions:
    DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , NamedFieldPuns
    , ScopedTypeVariables
    , TypeFamilies
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
