name:                HaskAdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spencerturkel/HaskAdventOfCode#readme
license:             BSD3
license-file:        LICENSE
author:              Spencer Turkel
maintainer:          contact@spencerturkel.com
copyright:           Copyright (c) 2017 Spencer Turkel
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:
  input/*.txt

executable RunDay6
  hs-source-dirs: executables
  main-is: RunDay6.hs
  build-depends: 
    base >= 4.7 && < 5
    , HaskAdventOfCode
  default-language: Haskell2010

executable RunDay5PartTwo
  hs-source-dirs: executables
  main-is: RunDay5PartTwo.hs
  build-depends: 
    base >= 4.7 && < 5
    , HaskAdventOfCode
  default-language: Haskell2010

library
  hs-source-dirs:
    src
    , src/Day3
  exposed-modules:
    Day3PartOne
    , Day3PartTwo
    , Day4
    , Day5
    , Day6
    , Point
    , Spiral
  other-modules:
    Paths_HaskAdventOfCode
  autogen-modules:
    Paths_HaskAdventOfCode
  default-language: Haskell2010
  build-depends:       
    base >= 4.7 && < 5
    , containers
    , Stream >= 0.4.7 && < 0.5
    , vector
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , TypeFamilies
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010