name:                HaskAdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spencerturkel/HaskAdventOfCode#readme
license:             BSD3
license-file:        LICENSE
author:              Spencer Turkel
maintainer:          contact@spencerturkel.com
copyright:           Copyright (c) 2017 Spencer Turkel
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable RunDay6
  hs-source-dirs: executables
  main-is: RunDay6.hs
  build-depends: 
    base >= 4.7 && < 5
    , Day6
  default-language: Haskell2010

executable RunDay5PartTwo
  hs-source-dirs: executables
  main-is: RunDay5PartTwo.hs
  build-depends: 
    base >= 4.7 && < 5
    , Day5
  default-language: Haskell2010