name:                Day3
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    .
  exposed-modules:
    Day3PartOne
    , Day3PartTwo
    , Point
    , Spiral
  build-depends:       
    base >= 4.7 && < 5
    , Stream >= 0.4.7 && < 0.5
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , TypeFamilies
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010