name:                Day4
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
data-files:          input.txt

library
  hs-source-dirs:
    .
  exposed-modules:
    Day4
  other-modules:
    Paths_Day4
  autogen-modules:
    Paths_Day4
  build-depends:       
    base >= 4.7 && < 5
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010