name:                Day5
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
data-files:          input.txt

executable RunDay5PartTwo
  hs-source-dirs: app
  main-is: RunDay5PartTwo.hs
  build-depends: 
    base >= 4.7 && < 5
    , Day5
  default-language: Haskell2010

library
  hs-source-dirs: .
  exposed-modules: Day5
  other-modules: Paths_Day5
  autogen-modules: Paths_Day5
  build-depends:       
    base >= 4.7 && < 5
    , vector
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010