name:                Day7
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable RunDay7
  hs-source-dirs: app
  main-is: RunDay7.hs
  build-depends: 
    base >= 4.7 && < 5
    , Day7
  default-language: Haskell2010

library
  hs-source-dirs: .
  exposed-modules: 
    Parser
  other-modules: Paths_Day7
  autogen-modules: Paths_Day7
  build-depends:       
    base >= 4.7 && < 5
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010