name:                Day7
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
data-files:          input.txt, test.txt

executable RunDay7PartOne
  hs-source-dirs: app
  main-is: RunDay7PartOne.hs
  build-depends: 
    base >= 4.7 && < 5
    , Day7
  other-modules: Paths_Day7
  autogen-modules: Paths_Day7
  default-language: Haskell2010

executable RunDay7PartTwo
  hs-source-dirs: app
  main-is: RunDay7PartTwo.hs
  build-depends: 
    base >= 4.7 && < 5
    , Day7
  other-modules: Paths_Day7
  autogen-modules: Paths_Day7
  default-language: Haskell2010

library
  hs-source-dirs: .
  exposed-modules: 
    FindBalancingWeight
    , FindRoot
    , Parser
    , ProgramInfo
    , ToTree
  build-depends:       
    base >= 4.7 && < 5
    , containers
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010