name:                Day8
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
data-files:          input.txt, test.txt

library
  hs-source-dirs: .
  exposed-modules: 
    Instruction,
    Parser
  build-depends:       
    base >= 4.7 && < 5
    , regex-applicative
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010