name:                Day8
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
data-files:          input.txt, test.txt

executable RunDay8PartTwo
  hs-source-dirs: app
  main-is: RunDay8PartTwo.hs
  build-depends:       
    base >= 4.7 && < 5
    , containers
    , Day8
  other-modules: Paths_Day8
  autogen-modules: Paths_Day8
  default-language: Haskell2010

executable RunDay8PartOne
  hs-source-dirs: app
  main-is: RunDay8PartOne.hs
  build-depends:       
    base >= 4.7 && < 5
    , containers
    , Day8
  other-modules: Paths_Day8
  autogen-modules: Paths_Day8
  default-language: Haskell2010

library
  hs-source-dirs: .
  exposed-modules: 
    Interpreter
    Instruction,
    Parser
  build-depends:       
    base >= 4.7 && < 5
    , containers
    , regex-applicative
  default-extensions:
    ConstraintKinds
    , DeriveFunctor
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , InstanceSigs
    , NamedFieldPuns
    , RankNTypes
    , ScopedTypeVariables
    , ViewPatterns
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010