name:                Day9
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
data-files:          input.txt, test.txt

executable RunDay9PartOne
  hs-source-dirs: app
  build-depends:       
    base >= 4.7 && < 5
    , Day9
  main-is: RunDay9PartOne.hs
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010

library
  hs-source-dirs: .
  build-depends:       
    base >= 4.7 && < 5
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmonomorphism-restriction
    -Wredundant-constraints
    -Werror
    -Wcompat
  default-language: Haskell2010